overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,8 +33,12 @@ time, mark, audio, video {
 html,
 body,
 #root {
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
 }
 
@@ -47,8 +51,8 @@ body {
     padding: 0;
     margin:0  auto;
     max-width: 500px;
-    width: 100vh;
-    height: 100vh;
+    /* width: 100vh;
+    height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -91,7 +95,7 @@ body {
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #4b484a;
     opacity: 1; /* Firefox */
-    font-size: 17px;
+    font-size: 15px;
   }
 
 .form > .pass-wrapper {
